--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -1,7 +1,11 @@
 .sidenav{
-    background-color: #c03b3b;
+    background-color: #cc6250;
 }
 
 .sidenav i{
     padding-right: 10px;
+}
+
+.content {
+    padding: 16px;
 }
