--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,9 +1,5 @@
 <mat-toolbar class="footer">
     <span>
-        Desenvolvido com
-        <i class="material-icons red v-middle">
-            favorite
-        </i>
-        por _dav<span class="red"><strong>math</strong></span>
+        Desenvolvido por _dav<span class="red"><strong>math</strong></span>
     </span>
 </mat-toolbar>
