--- a/frontend/src/app/components/template/nav/nav.component.css
+++ b/frontend/src/app/components/template/nav/nav.component.css
@@ -1,5 +1,5 @@
 .sidenav{
-    background-color: #cc6250;
+    background-color: #7b3699;
 }
 
 .sidenav i{
@@ -8,4 +8,5 @@
 
 .content {
     padding: 16px;
+    background-color: #303030;
 }
